# sho.rs

./: Cargo.toml  Dockerfile  README.md
shors/: Cargo.toml
shors/src/: main.rs
shors/src/shortener/: mod.rs  shortener.rs
src/: main.rs
src/shortener/: shortener.rs  url.rs
src/storage/: config.rs  mod.rs  storage.rs
src/utils/: types.rs
