[package]
authors = ["Yagiz Degirmenci <yagizcanilbey1903@gmail.com>"]
edition = "2018"
name = "shors"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
dotenv = "0.15.0"
harsh = "0.2.1"
rocket = "0.4.7"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[dependencies.mongodb]
default-features = false
features = ["sync"]
version = "1.1.1"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]
